[project]
name = "lst-dl-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
    "torch==2.11.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
